--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "realrashid/sweet-alert": "^7.1",
+        "spatie/laravel-cookie-consent": "^3.2",
         "spatie/laravel-permission": "^6.3"
     },
     "require-dev": {
